# pyconsole

./: CLAUDE.md  README.md  pyproject.toml  run.py
pyconsole/: main.py  process_list.py  stack_reader.py
pyconsole/ui/: app.py  process_panel.py  thread_window.py
